// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of table 1`] = `
<div
  className="table-container"
>
  <div
    className="table-header-container"
  >
    <div
      className="table-header-filter"
    >
      <div
        className="filter-tokenizer"
      >
        <span
          className="left-addon first-addon export-search"
          data-for="structured-query-tooltip"
          data-tip="Save Search"
          onClick={[Function]}
        >
          <i
            className="fal fa-save"
          />
        </span>
        <span
          className="left-addon active-filter-container"
          data-for="structured-query-tooltip"
          data-tip="View Filters"
          onClick={[Function]}
        >
          <i
            className="far fa-list"
          />
          <span
            className="active-filter-count"
          >
            0
          </span>
        </span>
        <div
          className="filter-input-group"
          onClick={[Function]}
        >
          <div
            className="filter-category"
          >
            
          </div>
          <div
            className="filter-operator"
          >
            
          </div>
          <div
            className="typeahead"
          >
            <input
              className=""
              onChange={[Function]}
              onKeyDown={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="__react_component_tooltip place-top type-dark "
          data-id="tooltip"
          id="structured-query-tooltip"
        />
      </div>
    </div>
    <div
      className="table-header-toolbar"
    >
      <span
        data-for="table-tooltip"
        data-tip="Add Record"
      >
        <button
          className="btn-table"
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-file-plus"
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Add Multiple Records"
      >
        <button
          className="btn-table"
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-copy"
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Toggle Edit Mode"
      >
        <button
          className="btn-table"
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-pencil"
            style={
              Object {
                "color": "white",
              }
            }
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Delete Rows"
      >
        <button
          className="btn-table"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-trash-alt"
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Toggle Columns"
      >
        <button
          className="btn-table"
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-columns"
          />
        </button>
      </span>
      <div
        className="__react_component_tooltip place-top type-dark "
        data-id="tooltip"
        id="table-tooltip"
      />
    </div>
  </div>
  <div
    className="table-main-container"
  >
    <div
      className="table-content"
    >
      <div
        className="table-no-results text-success text-center font-bold"
      >
        No Results
      </div>
    </div>
  </div>
</div>
`;

exports[`Table is loading 1`] = `
<div
  className="table-container"
>
  <div
    className="table-header-container"
  >
    <div
      className="table-header-filter"
    >
      <div
        className="filter-tokenizer"
      >
        <span
          className="left-addon first-addon export-search"
          data-for="structured-query-tooltip"
          data-tip="Save Search"
          onClick={[Function]}
        >
          <i
            className="fal fa-save"
          />
        </span>
        <span
          className="left-addon active-filter-container"
          data-for="structured-query-tooltip"
          data-tip="View Filters"
          onClick={[Function]}
        >
          <i
            className="far fa-list"
          />
          <span
            className="active-filter-count"
          >
            0
          </span>
        </span>
        <div
          className="filter-input-group"
          onClick={[Function]}
        >
          <div
            className="filter-category"
          >
            
          </div>
          <div
            className="filter-operator"
          >
            
          </div>
          <div
            className="typeahead"
          >
            <input
              className=""
              onChange={[Function]}
              onKeyDown={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="__react_component_tooltip place-top type-dark "
          data-id="tooltip"
          id="structured-query-tooltip"
        />
      </div>
    </div>
    <div
      className="table-header-toolbar"
    >
      <span
        data-for="table-tooltip"
        data-tip="Add Record"
      >
        <button
          className="btn-table"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-file-plus"
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Add Multiple Records"
      >
        <button
          className="btn-table"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-copy"
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Toggle Edit Mode"
      >
        <button
          className="btn-table"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-pencil"
            style={Object {}}
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Delete Rows"
      >
        <button
          className="btn-table"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-trash-alt"
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Toggle Columns"
      >
        <button
          className="btn-table"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-columns"
          />
        </button>
      </span>
      <div
        className="__react_component_tooltip place-top type-dark "
        data-id="tooltip"
        id="table-tooltip"
      />
    </div>
  </div>
  <div
    className="table-loading"
  >
    <svg
      height="50"
      style={
        Object {
          "overflow": "visible",
        }
      }
      viewBox="0 0 50 50"
      width="50"
    >
      <circle
        cx="25"
        cy="25"
        fill="none"
        r="25"
        stroke="#8dc63f"
        strokeDasharray="125, 10, 10, 10"
        strokeWidth="4"
      >
        <animateTransform
          attributeName="transform"
          attributeType="XML"
          dur="0.75s"
          from="0 25 25"
          repeatCount="indefinite"
          to="360 25 25"
          type="rotate"
        />
      </circle>
      <circle
        cx="25"
        cy="25"
        fill="#8dc63f"
        r="18"
      />
      <path
        d="M 0,200 v 200 h 39 39 v -88.32 c 0,-52.457 0.148,-88.474 0.364,-88.7 0.452,-0.473 1.202,-44.76 1.606,-94.914 l 0.03,-3.734 0.9,1.076 c 1.66507,2.62974 67.30297,66.16423 68.25108,66.95795 0.45858,0.73769 3.627,1.0352 4.84363,0.56794 2.47529,-1.95604 36.86313,-41.98317 38.81136,-44.27433 4.74599,-4.52232 -0.51279,-7.4618 -2.21342,-9.93159 C 188.80969,135.92414 63.639195,4.4253259 57.376547,-0.11122888 L -1.6749927,-0.06203677 0,200"
        fill="#003852"
        transform="translate(15, 15) scale(0.05)"
      />
      <path
        d="M 330.7417,0.01981344 C 326.35671,4.7924267 167.09994,197.80398 164.48899,200.55076 c -1.36169,1.55463 -1.16506,4.70413 -0.169,6.151 0.63368,1.06232 31.70999,34.79199 35.70675,39.32451 1.79131,1.98312 8.95044,3.24974 12.451,-0.036 2.73399,-3.11948 104.79355,-117.51423 109.27659,-121.68521 0.1076,14.23648 0.10245,39.80001 0.20567,58.89494 -0.047,1.87 -0.057,51.415 -0.023,110.1 L 322,400 h 39 39 V 200 0 h -34.553 c -1.24717,0 -33.6817,0.00251564 -34.7053,0.01981344"
        fill="white"
        transform="translate(15, 15) scale(0.05)"
      />
    </svg>
  </div>
</div>
`;

exports[`Table with a custom container class 1`] = `
<div
  className="table-container foo"
>
  <div
    className="table-header-container"
  >
    <div
      className="table-header-filter"
    >
      <div
        className="filter-tokenizer"
      >
        <span
          className="left-addon first-addon export-search"
          data-for="structured-query-tooltip"
          data-tip="Save Search"
          onClick={[Function]}
        >
          <i
            className="fal fa-save"
          />
        </span>
        <span
          className="left-addon active-filter-container"
          data-for="structured-query-tooltip"
          data-tip="View Filters"
          onClick={[Function]}
        >
          <i
            className="far fa-list"
          />
          <span
            className="active-filter-count"
          >
            0
          </span>
        </span>
        <div
          className="filter-input-group"
          onClick={[Function]}
        >
          <div
            className="filter-category"
          >
            
          </div>
          <div
            className="filter-operator"
          >
            
          </div>
          <div
            className="typeahead"
          >
            <input
              className=""
              onChange={[Function]}
              onKeyDown={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="__react_component_tooltip place-top type-dark "
          data-id="tooltip"
          id="structured-query-tooltip"
        />
      </div>
    </div>
    <div
      className="table-header-toolbar"
    >
      <span
        data-for="table-tooltip"
        data-tip="Add Record"
      >
        <button
          className="btn-table"
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-file-plus"
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Add Multiple Records"
      >
        <button
          className="btn-table"
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-copy"
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Toggle Edit Mode"
      >
        <button
          className="btn-table"
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-pencil"
            style={
              Object {
                "color": "white",
              }
            }
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Delete Rows"
      >
        <button
          className="btn-table"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-trash-alt"
          />
        </button>
      </span>
      <span
        data-for="table-tooltip"
        data-tip="Toggle Columns"
      >
        <button
          className="btn-table"
          onClick={[Function]}
          type="button"
        >
          <i
            className="fal fa-columns"
          />
        </button>
      </span>
      <div
        className="__react_component_tooltip place-top type-dark "
        data-id="tooltip"
        id="table-tooltip"
      />
    </div>
  </div>
  <div
    className="table-main-container"
  >
    <div
      className="table-content"
    >
      <div
        className="table-no-results text-success text-center font-bold"
      >
        No Results
      </div>
    </div>
  </div>
</div>
`;
